--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.8",
+    "classnames": "^2.3.2",
     "html-react-parser": "^1.4.8",
     "next": "^13",
     "next-drupal": "^1.6.0",
