--- a/.env.local
+++ b/.env.local
@@ -4,13 +4,13 @@
 NEXT_PUBLIC_DRUPAL_BASE_URL=http://dev.mountec.io
 NEXT_IMAGE_DOMAIN=dev.mountec.io
 
-# Required for Preview Mode
-DRUPAL_PREVIEW_SECRET=secret
-
 # Authentication (Bearer)
-DRUPAL_CLIENT_ID=00000000-0000-0000-0000-000000000000
-DRUPAL_CLIENT_SECRET=secret
+DRUPAL_CLIENT_ID=next_js
+DRUPAL_CLIENT_SECRET=75QrlwEnb3Tf4SkFCzAQcL2UhLOjbRKBHU6xLrmWkqc
+
+# Required for Preview Mode
+DRUPAL_PREVIEW_SECRET=6SZy9xkdtR
 
 # Optional
-DRUPAL_SITE_ID=schemadotorg_demo_next_site
+DRUPAL_SITE_ID=next_js
 DRUPAL_FRONT_PAGE=/dashboard/overview
