--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "next-mountec",
-  "version": "1.8.0",
-  "private": true,
-  "license": "MIT",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "preview": "next build && next start",
-    "lint": "next lint"
-  },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.8",
     "classnames": "^2.3.2",
+    "clsx": "^1.2.1",
+    "drupal-jsonapi-params": "^2.2.0",
+    "focus-visible": "^5.2.0",
+    "framer-motion": "^10.12.21",
     "html-react-parser": "^1.4.8",
+    "i18next": "^23.2.8",
     "next": "^13",
     "next-drupal": "^1.6.0",
+    "next-i18next": "^14.0.0",
+    "postcss-focus-visible": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.1",
     "sharp": "^0.31.2"
   },
   "devDependencies": {
@@ -27,8 +24,21 @@
     "autoprefixer": "^10.4.13",
     "eslint": "^8.28.0",
     "eslint-config-next": "^13.0.6",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4",
+    "postcss": "^8.4.25",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.9.3"
-  }
+  },
+  "license": "MIT",
+  "name": "next-mountec",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint",
+    "preview": "next build && next start",
+    "start": "next start"
+  },
+  "version": "1.8.0"
 }
