--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@tailwindcss/typography": "^0.5.8",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
