--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^10.12.21",
     "html-react-parser": "^1.4.14",
     "i18next": "^23.2.8",
+    "jsonapi-serializer": "^3.6.7",
     "next": "^13",
     "next-drupal": "^1.6.0",
     "next-i18next": "^14.0.0",
