--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@tailwindcss/typography": "^0.5.8",
+    "axios": "^1.5.0",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "drupal-jsonapi-params": "^2.2.0",
@@ -17,7 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
-    "sharp": "^0.31.2"
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@types/node": "^18.11.10",
