--- a/.env.local
+++ b/.env.local
@@ -1,16 +1,16 @@
 # See https://next-drupal.org/docs/environment-variables
 
 # Required
-NEXT_PUBLIC_DRUPAL_BASE_URL=http://dev.mountec.io
-NEXT_IMAGE_DOMAIN=dev.mountec.io
+NEXT_PUBLIC_DRUPAL_BASE_URL=https://admin.mountec-corp.com
+NEXT_IMAGE_DOMAIN=admin.mountec-corp.com
 
 # Authentication (Bearer)
-DRUPAL_CLIENT_ID=next_js
-DRUPAL_CLIENT_SECRET=75QrlwEnb3Tf4SkFCzAQcL2UhLOjbRKBHU6xLrmWkqc
+DRUPAL_CLIENT_ID=IAq501Oh4fDXo9H1zYDJeAHkGSHoDmWJKh2Lr2doaXo
+DRUPAL_CLIENT_SECRET=0IsYeKTo1gk_kWUchOn2zN-g_LQluxvjr8b1RLUVNAI
 
 # Required for Preview Mode
 DRUPAL_PREVIEW_SECRET=6SZy9xkdtR
 
 # Optional
 DRUPAL_SITE_ID=next_js
-DRUPAL_FRONT_PAGE=/dashboard/overview
+DRUPAL_FRONT_PAGE=/home
